--- a/docs/templates/material/public/main.css
+++ b/docs/templates/material/public/main.css
@@ -187,6 +187,10 @@ code[data-highlighted="yes"] {
 }
 
 /* CUSTOM */
+nav.navbar {
+  background: linear-gradient(0, var(--bs-primary-bg-subtle), var(--bs-tertiary-bg));
+}
+
 .affix {
   width: 360px !important;
 }
@@ -265,4 +269,16 @@ span.attrhidden {
   border-radius: var(--bs-border-radius);
   border: 1px solid #ccc6;
   padding: 2px 5px;
+}
+
+#github-icon {
+  position: relative;
+  opacity: 1;
+  cursor: pointer;
+  color: var(--bs-navbar-brand-color);
+  padding: 6px;
+}
+
+#github-icon.hover, #github-icon:focus {
+  color: var(--bs-navbar-brand-hover-color);
 }
