--- a/FlameCsv.Core/Reading/Internal/ISimdVector.Generated.tt
+++ b/FlameCsv.Core/Reading/Internal/ISimdVector.Generated.tt
@@ -4,11 +4,7 @@
     const string PragmaCondition = "RELEASE";
 
     // TODO: Add support for AVX-512 etc.
-    (string size, string[] moveMask)[] intrinsics = [
-        ("128", ["Sse2", "Avx"]),
-        ("256", ["Avx2"]),
-        // ("512", ["Avx512F", "Avx512BW"]),
-        ];
+    string[] sizes = ["128", "256", "512"];
 
     (string keyword, string name)[] types = [("char", "Char"), ("byte", "Byte")];
 
@@ -54,6 +50,24 @@
                                     }
                             """;
 
+    const string Narrow512 = """
+
+                                    if (Avx512BW.IsSupported && Avx512F.IsSupported)
+                                    {
+                                       var packed = Avx512BW.PackUnsignedSaturate(v0.AsInt16(), v1.AsInt16());
+
+                                       // Avx512BW.PackUnsignedSaturate will interleave the inputs in 8-byte blocks.
+                                       // We want to preserve the order of the two input vectors, so we deinterleave the packed value.
+                                       return Avx512F.PermuteVar8x64(packed.AsInt64(), Vector512.Create(0, 2, 4, 6, 1, 3, 5, 7)).AsByte();
+                                    }
+                                    else
+                                    {
+                                        var lower = Vector512.Min(v0, Vector512.Create((ushort)127));
+                                        var upper = Vector512.Min(v1, Vector512.Create((ushort)127));
+                                        return Vector512.Narrow(lower, upper);
+                                    }
+                             """;
+
     void WriteNarrowing(string size)
     {
         if (size == "128")
@@ -63,6 +77,10 @@
         else if (size == "256")
         {
             WriteLine(Narrow256);
+        }
+        else if (size == "512")
+        {
+            WriteLine(Narrow512);
         }
         else
         {
@@ -112,9 +130,9 @@ internal static class SimdVector
         if (Unsafe.SizeOf<T>() == sizeof(<#= keyword #>))
         {
 <#
-        for (int i = intrinsics.Length - 1; i >= 0; i--)
+        for (int i = sizes.Length - 1; i >= 0; i--)
         {
-            var size = intrinsics[i].size;
+            var size = sizes[i];
 #>
             if (Vec<#= size #><#= name #>.IsSupported)
             {
@@ -193,11 +211,16 @@ internal interface ISimdVector<T, TVector>
     /// Returns a copy of the vector with the first element set to zero.
     /// </summary>
     [JetBrains.Annotations.Pure] TVector WithZeroFirstElement();
+
+    /// <summary>
+    /// Returns the bytes of the vector allocated to a new array.
+    /// </summary>
+    [JetBrains.Annotations.Pure] byte[] ToArray();
 }
 
 <#
     foreach (var (keyword, name) in types)
-        foreach (var (size, _) in intrinsics)
+        foreach (var size in sizes)
         {
             string typeName = $"Vec{size}{name}";
 #>
@@ -314,12 +337,15 @@ internal readonly struct <#= typeName #> : ISimdVector<<#= keyword #>, <#= typeN
     [<#= MethodImpl #>]
     public static explicit operator Vector<#= size #><byte>(<#= typeName #> value) => Unsafe.As<<#= typeName #>, Vector<#= size #><byte>>(ref value);
 
-    public override string ToString()
+    [<#= MethodImpl #>]
+    public byte[] ToArray()
     {
         byte[] values = new byte[Count];
-        _value<#= keyword == "byte" ? "" : ".AsByte()" #>.CopyTo(values);
-        return _value.ToString() + " " + System.Text.Encoding.ASCII.GetString(values);
+        _value.CopyTo(values);
+        return values;
     }
+
+    public override string ToString() => _value.ToString() + " " + System.Text.Encoding.ASCII.GetString(ToArray());
 
     public override bool Equals(object obj) => throw new NotSupportedException();
     public override int GetHashCode() => throw new NotSupportedException();
@@ -328,7 +354,8 @@ internal readonly struct <#= typeName #> : ISimdVector<<#= keyword #>, <#= typeN
         }
 #>
 
-/// <summary>Vector type that that is not supported and does nothing.</summary>
+#if false
+/// <summary>Vector type that is not supported and does nothing.</summary>
 internal readonly struct NoOpVector<T> : ISimdVector<T, NoOpVector<T>> where T : unmanaged, IBinaryInteger<T>
 {
     public static bool IsSupported => false;
@@ -343,6 +370,8 @@ internal readonly struct NoOpVector<T> : ISimdVector<T, NoOpVector<T>> where T :
     public static NoOpVector<T> operator |(NoOpVector<T> left, NoOpVector<T> right) => throw new NotSupportedException();
     public static bool operator ==(NoOpVector<T> left, NoOpVector<T> right) => throw new NotSupportedException();
     public static bool operator !=(NoOpVector<T> left, NoOpVector<T> right) => throw new NotSupportedException();
+    public byte[] ToArray() => throw new NotSupportedException();
     public override bool Equals(object obj) => throw new NotSupportedException();
     public override int GetHashCode() => throw new NotSupportedException();
 }
+#endif
