refactor: implement tokenizing as a separate class

--- a/FlameCsv.Core/Reading/Internal/ISimdVector.Generated.tt
+++ b/FlameCsv.Core/Reading/Internal/ISimdVector.Generated.tt
@@ -105,6 +105,26 @@ namespace FlameCsv.Reading.Internal;
 
 // this code borrows heavily from Ascii.Utility.cs in System.Text.Ascii (MIT license)
 
+internal static class SimdVector
+{
+    /// <summary>
+    /// Returns <c>true</c> if any of the vector types are hardware accelerated.
+    /// </summary>
+    public static bool SupportsAny =>
+#if <#= PragmaCondition #>
+        <#
+    for (int i = 0; i < sizes.Length; i++)
+    {
+        if (i != 0) Write(" || ");
+        Write("Vector");
+        Write(sizes[i]);
+        Write(".IsHardwareAccelerated");
+    } #>;
+#else
+        true;
+#endif
+}
+
 /// <summary>Generic type wrapping a byte vector.</summary>
 [System.CodeDom.Compiler.GeneratedCode(Messages.T4Template, null)]
 internal interface ISimdVector<T, TVector>
