feat: use Utf8StreamReader
increase default file writing buffer size

--- a/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
+++ b/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
@@ -78,10 +78,8 @@ static partial class CsvWriter
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
         builder ??= new();
-        WriteCore(
-            values,
-            CsvFieldWriter.Create(new StringWriter(builder), options, bufferSize: DefaultBufferSize, leaveOpen: false),
-            dematerializer);
+        using var writer = CsvFieldWriter.Create(new StringWriter(builder), options, bufferSize: -1, leaveOpen: false);
+        WriteCore(values, writer, dematerializer);
         return builder;
     }
 
@@ -105,10 +103,8 @@ static partial class CsvWriter
 
         using FileStream stream = GetFileStream(path, isAsync: false);
 
-        WriteCore(
-            values,
-            CsvFieldWriter.Create(stream, options),
-            dematerializer);
+        using var writer = CsvFieldWriter.Create(stream, options);
+        WriteCore(values, writer, dematerializer);
     }
 
     /// <summary>
@@ -134,12 +130,12 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        using FileStream stream = GetFileStream(path, isAsync: false, bufferSize);
+        if (bufferSize == -1) bufferSize = DefaultFileStreamBufferSize;
 
-        WriteCore(
-            values,
-            CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false),
-            dematerializer);
+        using FileStream stream = GetFileStream(path, isAsync: false, bufferSize);
+        using var writer = CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false);
+
+        WriteCore(values, writer, dematerializer);
     }
 
     /// <summary>
@@ -164,10 +160,8 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        WriteCore(
-            values,
-            CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen),
-            dematerializer);
+        using var writer = CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen);
+        WriteCore(values, writer, dematerializer);
     }
 
     /// <summary>
@@ -186,17 +180,14 @@ static partial class CsvWriter
         int bufferSize = -1,
         bool leaveOpen = false)
     {
-        ArgumentNullException.ThrowIfNull(stream);
-        ArgumentNullException.ThrowIfNull(values);
         FlameCsv.Extensions.Guard.CanWrite(stream);
+        ArgumentNullException.ThrowIfNull(values);
 
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        WriteCore(
-            values,
-            CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen),
-            dematerializer);
+        using var writer = CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen);
+        WriteCore(values, writer, dematerializer);
     }
 
 <#
@@ -232,11 +223,14 @@ static partial class CsvWriter
             options ??= CsvOptions<char>.Default;
             IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
+            using var writer = CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen);
+
             await WriteAsyncCore(
                 values,
-                CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen),
+                writer,
                 dematerializer,
-                cancellationToken).ConfigureAwait(false);
+                cancellationToken)
+                .ConfigureAwait(false);
         }
     }
 
@@ -259,9 +253,8 @@ static partial class CsvWriter
         bool leaveOpen = false,
         CancellationToken cancellationToken = default)
     {
-        ArgumentNullException.ThrowIfNull(stream);
-        ArgumentNullException.ThrowIfNull(values);
         FlameCsv.Extensions.Guard.CanWrite(stream);
+        ArgumentNullException.ThrowIfNull(values);
 
         try
         {
@@ -269,11 +262,14 @@ static partial class CsvWriter
             options ??= CsvOptions<byte>.Default;
             IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
+            using var writer = CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen);
+
             await WriteAsyncCore(
                 values,
-                CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen),
+                writer,
                 dematerializer,
-                cancellationToken).ConfigureAwait(false);
+                cancellationToken)
+                .ConfigureAwait(false);
         }
         finally
         {
@@ -309,11 +305,14 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
+        using var writer = CsvFieldWriter.Create(pipe, options);
+
         await WriteAsyncCore(
             values,
-            CsvFieldWriter.Create(pipe, options),
+            writer,
             dematerializer,
-            cancellationToken).ConfigureAwait(false);
+            cancellationToken)
+            .ConfigureAwait(false);
     }
 
     /// <summary>
@@ -342,11 +341,14 @@ static partial class CsvWriter
         FileStream stream = GetFileStream(path, isAsync: true);
         await using (stream.ConfigureAwait(false))
         {
+            using var writer = CsvFieldWriter.Create(stream, options);
+
             await WriteAsyncCore(
                 values,
-                CsvFieldWriter.Create(stream, options),
+                writer,
                 dematerializer,
-                cancellationToken).ConfigureAwait(false);
+                cancellationToken)
+                .ConfigureAwait(false);
         }
     }
 
@@ -378,14 +380,19 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        FileStream stream = GetFileStream(path, isAsync: true);
+        if (bufferSize == -1) bufferSize = DefaultFileStreamBufferSize;
+
+        FileStream stream = GetFileStream(path, isAsync: true, bufferSize);
         await using (stream.ConfigureAwait(false))
         {
+            using var writer = CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false);
+
             await WriteAsyncCore(
                 values,
-                CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false),
+                writer,
                 dematerializer,
-                cancellationToken).ConfigureAwait(false);
+                cancellationToken)
+                .ConfigureAwait(false);
         }
     }
 
